--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "firebase": "^9.9.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.8.0",
+    "react-medium-image-zoom": "^5.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.8",
